# neolinearalgebra

./: .gitignore  LICENSE  Matrix.ipynb  Matrix.py  README.md  setup.cfg  setup.py  test.py
Documentation/: Documentation.html  index.html  neolinearalgebra.html  search.js
Documentation/neolinearalgebra/: Matrix.html
neolinearalgebra/: .Matrix.py.swp  .test.py.swp  Matrix.py  __init__.py  test.py
src/neolinearalgebra/: Matrix.py
tests/: test.py
