[metadata]
name = neolinearalgebra
version = 0.1.5
author = Sajid Sarker
author_email = sajid.sarker@gmail.com
url = https://sajidsarker.github.io/2022/09/10/neo-linear-algebra-for-python.html
description = NEO Linear Algebra package for matrix manipulation.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linear algebra, matrix algebra, matrix, matrices, vector, vectors, math
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
package_dir=
    =src

[options.packages.find]
where=src
