[metadata]
name = neolinearalgebra
version = 0.2.4
author = Sajid Sarker
author_email = sajid.sarker@gmail.com
url = https://sajidsarker.github.io/2022/09/10/neo-linear-algebra-for-python.html
description = NEO Linear Algebra package for Matrix Manipulation.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linear algebra, matrix algebra, matrix, matrices, vector, vectors, math
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
package_dir=
    =src

[options.packages.find]
where=src
